setup files, structured html and css page

--- a/index.html
+++ b/index.html
@@ -3,11 +3,72 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="main.css">
-  <title>Document</title>
+  <!-- TODO: Insert a title for your page -->
 </head>
+
 <body>
+  <main>
+    <section id="nav-container">
+      <div id="nav-logo">nav logo</div>
+      <div id="nav-menu">nav hamburger menu</div>
+    </section> 
+
+  <!-- ABOUT ME SECTION CONTAINS IMAGE AND ABOUT ME SECTION -->
+    <section id="about-me-container">
+      <section id="about-me-image"><img src="images/Profile Pic Dec2020.jpg" alt="Dani Crosby"></section>
+
+
+  <!-- ABOUT ME CONTAINER CONTAINS IMAGE, ABOUT ME GRAPHIC AND ABOUT ME SECTION -->
+    <section id="about-me-text-container">
+
+  <!-- TOP OF CONTAINER CONTAINS FIRST NAME, LAST NAME, ABOUT ME PARAGRAPH -->
+      <section id="top-section">
+
+        <div id="first-name">Dani</div>
+        <div id="last-name">Crosby</div>
+
+        <p id="about-me-paragraph">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+          Quis eleifend quam adipiscing vitae proin sagittis. Mollis nunc sed id semper risus in hendrerit gravida rutrum. 
+          Enim sit amet venenatis urna. Nisl nisi scelerisque eu ultrices vitae auctor eu augue ut. Porttitor rhoncus dolor purus non enim. 
+          Porttitor eget dolor morbi non arcu risus. Amet mattis vulputate enim nulla aliquet.
+        </p>
+      </section>
+
+      <!-- BOTTOM SECTION CONTAINS ABOUT GRAPHIC, ICONS AND CONTACT ME BUTTON -->
+        <section id="bottom-section">
+          
+          <section id="about-graphic">
+            <img src="/images/about.png" alt="about-Dani" id="about-img">
+          </section>
+        <div id="icon-section">
+          <a href="github">icon</a>
+          <a href="github">icon</a>
+          <a href="github">icon</a>
+          <a href="github">icon</a>
+        </div>
+        <button id="contact-me-button">Contact Me!</button>
+      </section>
+
+    </section>
+
+    </section>
+
+    <hr>
+
+    <section id="technologies-section">TECHNOLOGIES-SECTION</section>
+
+    <hr>
+
+    <section id="technologies-section">PROJECTS-SECTION</section>
+
+    <hr>
   
+    <footer id="footer"> Dani Crosby 2020 </footer>
+
+  </main>
   <script src="main.js"></script>
 </body>
 </html>
