tweaks to formating

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
   <main>
     <section id="nav-container">
-      <div id="nav-logo">nav logo</div>
-      <div id="nav-menu">nav hamburger menu</div>
+      <div id="logo-block"><img src="/images/dani-logo.png" alt="nav-button" id="logo-block"></div>
+      <div id="nav-menu"><img src="/images/hamburger-nav.webp" alt="nav-button" id="nav-button-placeholder"></div>
     </section> 
 
   <!-- ABOUT ME SECTION CONTAINS IMAGE AND ABOUT ME SECTION -->
@@ -28,7 +28,7 @@
   <!-- TOP OF CONTAINER CONTAINS FIRST NAME, LAST NAME, ABOUT ME PARAGRAPH -->
       <section id="top-section">
 
-        <div id="first-name">dani</div>
+        <div id="first-name">dani,</div>
         <div id="last-name">crosby</div>
 
         <section id="about-paragraph-section">
@@ -39,8 +39,7 @@
         <p id="about-me-paragraph">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
           Quis eleifend quam adipiscing vitae proin sagittis. Mollis nunc sed id semper risus in hendrerit gravida rutrum. 
-          Enim sit amet venenatis urna. Nisl nisi scelerisque eu ultrices vitae auctor eu augue ut. Porttitor rhoncus dolor purus non enim. 
-          Porttitor eget dolor morbi non arcu risus. Amet mattis vulputate enim nulla aliquet.
+          Enim sit amet venenatis urna. Nisl nisi scelerisque eu ultrices vitae auctor eu augue ut.
         </p>
       </section>
     </section>
@@ -51,8 +50,8 @@
     
         <div id="icon-section">
           
-          <img src="/images/github-logo.png" alt="github-logo" id="github">
-          <img src="/images/linkedin-logo.png" alt="linkedIn-Logo" id="github">
+          <a href="https://github.com/danicrosby"><img src="/images/github-logo.png" alt="github-logo" id="github"></a>
+          <a href="https://www.linkedin.com/in/dani-crosby-80258544/"><img src="/images/linkedin-logo.png" alt="linkedIn-Logo" id="github"></a>
           <img src="/images/email-logo.png" alt="email-icon" id="github">
           <img src="/images/medium-logo.png" alt="medum-logo" id="github">
           <img src="/images/dog.webp" alt="old-friends-donation-icon" id="github">
