added background to body

--- a/index.html
+++ b/index.html
@@ -48,11 +48,8 @@
 
               <p id="about-me-paragraph">
                 <!-- TODO: Fill in bio info here: What is your background? Why do you want to go into development? What do you love about development? -->
-                My name is Dani Crosby, and I'm a junior software engineer finishing 
-                up night classes at Nashville Software School. I have a background
-                in home organization and am a small business owner. I hope to
-                organization background and new software skills to help companies to
-                refactor their code and create effenciency in a team workflow setting.
+                My name is <b>Dani Crosby</b>, and I'm a junior software studying Javascript, C#, and .Net at Nashville Software School. I have a background in home organization, welding, and as a small business owner. 
+                I hope to integrate my new software skills and passion for workflow efficiency to promote work-life balance within an ethical company. I also enjoy mowing my lawn, senior dogs, and daily hot cup of chai.
               </p>
             </section>
           </section>
