added functionality to social link icons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="main.css" />
-   <title>Hello, I'm Dani</title>
+    <title>Hello, I'm Dani</title>
   </head>
 
   <body>
@@ -48,8 +48,13 @@
 
               <p id="about-me-paragraph">
                 <!-- TODO: Fill in bio info here: What is your background? Why do you want to go into development? What do you love about development? -->
-                My name is <b>Dani Crosby</b>, and I'm a junior software studying Javascript, C#, and .Net at Nashville Software School. I have a background in home organization, welding, and as a small business owner. 
-                I hope to integrate my new software skills and passion for workflow efficiency to promote work-life balance within an ethical company. I also enjoy mowing my lawn, senior dogs, and daily hot cup of chai.
+                My name is <b>Dani Crosby</b>, and I'm a junior software
+                studying Javascript, C#, and .Net at Nashville Software School.
+                I have a background in home organization, welding, and as a
+                small business owner. I hope to integrate my new software skills
+                and passion for workflow efficiency to promote work-life balance
+                within an ethical company. I also enjoy mowing my lawn, senior
+                dogs, and daily hot cup of chai.
               </p>
             </section>
           </section>
@@ -57,25 +62,11 @@
           <!-- BOTTOM SECTION CONTAINS ABOUT GRAPHIC AND ICONS -->
           <section id="bottom-section">
             <div id="icon-section">
-              <a href="https://github.com/danicrosby"
-                ><img
-                  src="/images/github-logo.png"
-                  alt="github-logo"
-                  id="github"
-              /></a>
-              <a href="https://www.linkedin.com/in/dani-crosby-80258544/"
-                ><img
-                  src="/images/linkedin-logo.png"
-                  alt="linkedIn-Logo"
-                  id="github"
-              /></a>
-              <img src="/images/email-logo.png" alt="email-icon" id="github" />
-              <img src="/images/medium-logo.png" alt="medum-logo" id="github" />
-              <img
-                src="/images/dog.webp"
-                alt="old-friends-donation-icon"
-                id="github"
-              />
+              <a href="https://github.com/danicrosby"><img src="/images/github-logo.png" alt="github-logo" id="github"></a>
+              <a href="https://www.linkedin.com/in/dani-crosby-80258544/"><img src="/images/linkedin-logo.png" alt="linkedIn-Logo" id="github"></a>
+              <a href="mailto:dani.crosby1111@gmail.com"><img src="/images/email-logo.png" alt="email-icon" id="github"></a>
+              <a href="https://danicrosby.medium.com/"><img src="/images/medium-logo.png" alt="medum-logo" id="github"></a>
+              <a href="https://ofsds.org/"><img src="/images/dog.webp" alt="old-friends-donation-icon" id="github"></a>
             </div>
           </section>
         </section>
