--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Pavanam&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Pavanam&display=swap" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css" />
     <title>Hello, I'm Dani</title>
   </head>
@@ -28,15 +26,12 @@
         </div>
       </section>
 
-      <!-- ABOUT ME SECTION CONTAINS IMAGE AND ABOUT ME SECTION -->
-      <section id="about-me-container">
+      <section class="fullPage" id="bioPage">
         <section id="profile-image-container">
           <img src="images/Profile Pic Dec2020.jpg" alt="Dani Crosby" />
         </section>
 
-        <!-- ABOUT ME CONTAINER CONTAINS IMAGE, ABOUT ME GRAPHIC AND ABOUT ME SECTION -->
         <section id="about-me-text-container">
-          <!-- TOP OF CONTAINER CONTAINS FIRST NAME, LAST NAME, ABOUT ME PARAGRAPH -->
           <section id="top-section">
             <div id="first-name">hello,</div>
             <div id="last-name">THERE</div>
@@ -47,7 +42,6 @@
               </section>
 
               <p id="about-me-paragraph">
-                <!-- TODO: Fill in bio info here: What is your background? Why do you want to go into development? What do you love about development? -->
                 My name is <b>Dani Crosby</b>, and I'm a junior software
                 studying Javascript, C#, and .Net at Nashville Software School.
                 I have a background in home organization, welding, and as a
@@ -59,7 +53,6 @@
             </section>
           </section>
 
-          <!-- BOTTOM SECTION CONTAINS ABOUT GRAPHIC AND ICONS -->
           <section id="bottom-section">
             <div id="icon-section">
               <a href="https://github.com/danicrosby"><img src="/images/github-logo.png" alt="github-logo" id="github"></a>
@@ -74,17 +67,17 @@
 
       <hr />
 
-      <div class="fullPage" id="technologiesPage">
-        <!-- TODO: Start an UL of all of the tools and technologies you've started learning so far. (You'll beef this page up later). -->
-      </div>
-      <div class="fullPage" id="projectsPage"></div>
-      <!-- End Primary View -->
+      
+      <div class="fullPage" id="technologiesPage"> </div>
+     
 
-      <!-- Footer -->
-      <footer class="page-footer">
-        <!-- TODO: Fill in contact info here: Include things like email, LinkedIn, Twitter and GitHub links. -->
-      </footer>
+      <div class="fullPage" id="projectsPage"></div>
+
+
+      <footer class="page-footer"></footer>
+
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="main.js"></script>
   </body>
 </html>
