Created nav bar for each sectio of bio

--- a/index.html
+++ b/index.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
   <title>Ben Jarrett</title>
 </head>
-<body>
-  
 
+<body>
+  <nav>
+    <h2>Ben Jarrett</h2>
+    <h4>Aspring Junior Developer</h4>
+
+    <ul id="myLinks">
+      <li><a id="myBio">Biography</a></li>
+      <li><a id="myTech">Tech</a></li>
+      <li><a id="myProjects">Projects</a></li>
+    </ul>
+  </nav>
+
+<div class="fullPage" id="bioPage">
+  Born and raised in Pittsburgh, I developed a love for technology at a young age. What sarted with a passion for video games, became an obsession with computer hardware. Although I ultimately chose to pursure my first love, music, tech has always lingered as a staple in my life. So much so, that I can't imagine myself going into any other field.
+  
+  I found deelpment at a recent job, where there was a problem that needed fixed. We had no shipping numbers being sent to out customers... Keep in mind, this is a company that does well over 35 million dollars of business a year. To say this was a huge issue would be an understatement. 
+
+  Through reserach, I discovered Python. Through even more research, I found "How to Automate The Boring Stuff with Python". After going through this book, I wrote a script that takes shipping data from our third party shipment website and inputs the keys to enter the tracking information for each order in our database before it is invoiced. When the order was invoiced, our database sends a customer their tracking number. 
+
+  And that, that sums up what I love so much about development. The ability to take it upon yourself, and your team, to fix major issues and improve the situation for everyone. 
+</div>
+
+<div class="fullPage" id = "technologiesPage">
+
+</div>
 
   <script src="main.js"></script>
 </body>
+
 </html>
