Created unordered list of tech we have lerned so far.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,15 @@
 </div>
 
 <div class="fullPage" id = "technologiesPage">
-
+<ul>
+  HTML
+  Javascript
+  CSS
+  Git Hub
+  Bootstrap
+  VSC
+  Loom
+</ul>
 </div>
 
   <script src="main.js"></script>
