--- a/index.html
+++ b/index.html
@@ -51,6 +51,16 @@
       Netlify
     </ul>
   </div>
+  <div class="fullPage" id="projectsPage"></div>
+
+  <footer class="page-footer">
+    <h2>Contact Me</h2>
+    <ul>
+      B.cl.jarrett@gmail.com
+      https://github.com/BenJarrett
+    </ul>
+  </footer>
+
 
   <script src="main.js"></script>
 </body>
