--- a/index.html
+++ b/index.html
@@ -40,23 +40,27 @@
   </div>
 
   <div class="fullPage" id="technologiesPage">
+    <h3>Technologies and Tools</h3>
     <ul>
-      HTML
-      Javascript
-      CSS
-      Git Hub
-      Bootstrap
-      VSC
-      Loom
+      <li>
+      HTML,
+      Javascript,
+      CSS,
+      Git Hub,
+      Bootstrap,
+      VSC,
+      Loom,
       Netlify
+    </li>
     </ul>
   </div>
   <div class="fullPage" id="projectsPage"></div>
 
   <footer class="page-footer">
-    <h2>Contact Me</h2>
+    <h3>Contact Me</h3>
     <ul>
-      B.cl.jarrett@gmail.com
+      B.cl.jarrett@gmail.com,
+      
       https://github.com/BenJarrett
     </ul>
   </footer>
