--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
     </li>
     </ul>
   </div>
-  <div class="fullPage" id="projectsPage"></div>
+
+  <div class="fullPage" id="projectsPage">
+</div>
 
   <footer class="page-footer">
     <h3>Contact Me</h3>
