--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <title>MARTIN SISK Professional Bio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
   <link rel="stylesheet" href="./styles/main.css">
 </head>
   <body>
+
     <nav>
       <!-- TODO: Insert some sort of H1-H6 with your name here -->
       <h2>Martin Sisk</h2>
@@ -46,9 +48,9 @@
       <!-- TODO: Fill in contact info here: Include things like email, LinkedIn, Twitter and GitHub links. -->
           <div class="list-group">
             <h3>Contact</h3>
-            <a href="#" class="list-group-item list-group-item-action" aria-current="true">LinkedIn</a>
-            <a href="#" class="list-group-item list-group-item-action">GitHub</a>
-            <a href="#" class="list-group-item list-group-item-action">Email</a>
+            <a href="https://www.linkedin.com/in/martin-sisk-9a64651aa/" class="list-group-item list-group-item-action" aria-current="true">LinkedIn</a>
+            <a href="https://github.com/fimoefive" class="list-group-item list-group-item-action">GitHub</a>
+            <a href="martin.sisk@pop.belmont.edu" class="list-group-item list-group-item-action">Email</a>
           </div>
       <div>&copy;2021 Martin Sisk</div>
     </footer>
