--- a/index.html
+++ b/index.html
@@ -13,33 +13,32 @@
 
   <body>
     <main>
-      <section id="nav-container">
-        <div id="logo-block">
-          <img src="/images/dani-logo.png" alt="nav-button" id="logo-block" />
-        </div>
-        <div id="nav-menu">
-          <img
-            src="/images/hamburger-nav.webp"
-            alt="nav-button"
-            id="nav-button-placeholder"
-          />
-        </div>
-      </section>
 
-      <section class="fullPage" id="bioPage">
-        <section id="profile-image-container">
-          <img src="images/Profile Pic Dec2020.jpg" alt="Dani Crosby" />
-        </section>
+      <!-- NAV SECTION -->
+      <div class="container" id="nav-section">
+          <img src="/images/dani-logo.png" id="nav-logo">
+          <img src="/images/hamburger-nav.webp"id="nav-dropdown">
+      </div>
 
-        <section id="about-me-text-container">
-          <section id="top-section">
-            <div id="first-name">hello,</div>
+      <!-- ABOUT ME PAGE -->
+      <div class="container" id="about-me-page">
+
+         <!-- PROFILE IMAGE CONTAINER-->
+        <div class="container" id="left-container">
+          <img src="images/Profile Pic Dec2020.jpg" id="profile-image">
+        </div>
+
+        <!-- TEXT CONTAINER -->
+        <div class="container" id="right-container">
+
+          <!-- TOP CONTAINER -->
+         <section class="top-section" id="top-section">
+
+            <div id="first-name"> hello,</div>
             <div id="last-name">THERE</div>
 
-            <section id="about-paragraph-section">
-              <section id="about-graphic">
-                <img src="/images/about1.png" alt="about-Dani" id="about-img" />
-              </section>
+            <div class="container" id="paragraph-container">
+              <img src="/images/about1.png" id="about-image">
 
               <p id="about-me-paragraph">
                 My name is <b>Dani Crosby</b>, and I'm a junior software
@@ -50,33 +49,35 @@
                 within an ethical company. I also enjoy mowing my lawn, senior
                 dogs, and daily hot cup of chai.
               </p>
-            </section>
-          </section>
-
-          <section id="bottom-section">
-            <div id="icon-section">
-              <a href="https://github.com/danicrosby"><img src="/images/github-logo.png" alt="github-logo" id="github"></a>
-              <a href="https://www.linkedin.com/in/dani-crosby-80258544/"><img src="/images/linkedin-logo.png" alt="linkedIn-Logo" id="github"></a>
-              <a href="mailto:dani.crosby1111@gmail.com"><img src="/images/email-logo.png" alt="email-icon" id="github"></a>
-              <a href="https://danicrosby.medium.com/"><img src="/images/medium-logo.png" alt="medum-logo" id="github"></a>
-              <a href="https://ofsds.org/"><img src="/images/dog.webp" alt="old-friends-donation-icon" id="github"></a>
             </div>
           </section>
-        </section>
-      </section>
-      <hr />
-      
-      <!-- <div class="fullPage" id="technologiesPage"> </div>
-     
-      <hr />
 
-      <div class="fullPage" id="projectsPage">
+          <!-- BOTTOM CONTAINER -->
+          <section id="bottom-section">
+            <a href="https://github.com/danicrosby"><img src="/images/github-logo.png" id="social-icons"></a>
+            <a href="https://www.linkedin.com/in/dani-crosby-80258544/"><img src="/images/linkedin-logo.png"id="social-icons"></a>
+            <a href="mailto:dani.crosby1111@gmail.com"><img src="/images/email-logo.png" id="social-icons"></a>
+            <a href="https://danicrosby.medium.com/"><img src="/images/medium-logo.png" id="social-icons"></a>
+            <a href="https://ofsds.org/"><img src="/images/dog.webp" id="social-icons"></a>
+          </section>
 
-      </div>
-      <hr />
+        <!-- END INTRO CONTAINER -->
+        </div>
+
+        <!-- END ABOUT ME PAGE -->
+       </div>
 
 
-      <footer class="page-footer"></footer> -->
+      <!-- TECHNOLOGIES PAGE -->
+      <div class="container" id="technologies-page"></div>
+
+       <!-- PROJECTS PAGE -->
+      <div class="container" id="projects-page"></div>
+
+       <!-- FOOTER -->
+      <div class="container" id="footer"></div>
+
+
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
