added project data to array

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="#">
-  <title>Test</title>
+  <title>Dani Crosby Bio</title>
 </head>
 <body>
-  <div id="app">
+  <div id="app"></div> <hr>
+  <div class="container" id="tech-page">
+    <div class="container">--TECH--</div>
+    
+
+
+
+    <div class="container" id="projects-page">--PROJECTS--</div> 
+    <div class="container" id="footer">--FOOTER--</div>
   </div>
+
 </body>
 </html>
